fixing some dark mode styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -94,6 +94,9 @@
 .outline_btn {
 	@apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
 }
+.outline_btn_orange {
+	@apply rounded-full border border-orange-500 bg-transparent py-1.5 px-5 text-orange-500 transition-all hover:bg-orange-500 hover:text-white text-center text-sm font-inter flex items-center justify-center;
+}
 
 .head_text {
 	@apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
@@ -117,6 +120,10 @@
 
 .search_input {
 	@apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
+}
+
+.search_input_dark {
+	@apply block w-full rounded-md border border-gray-900 bg-[#111] py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-white focus:outline-none focus:ring-0 text-gray-200;
 }
 
 .copy_btn {
